--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
     background-color: var(--background);
 }
 
+.selection-start{
+    background-color: rgb(206, 206, 108)!important;
+}
+
 .cell{
     background-color: aliceblue;
     border: #1f1B24;
@@ -40,7 +44,7 @@ body.selecting .square:hover {
 }
 
 .preview {
-    outline: 2px solid green;
+    outline: 2px solid var(--outline-color);
     outline-offset: -2px;
     position: relative;
 }
